--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "Konfidio Blockchain Backend Task",
   "main": "index.ts",
+  "engines": {
+    "node": "16"
+  },
   "scripts": {
-    "start": "node index.ts",
-    "dev": "nodemon -r dotenv/config index.ts",
+    "dev": "nodemon -r dotenv/config src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
     "test": "test"
   },
   "repository": {
@@ -14,8 +18,11 @@
   },
   "keywords": [
     "Node.js",
-    "express.js",
-    "blockchain"
+    "Express.js",
+    "Solidity",
+    "Typescript",
+    "Mocha",
+    "Blockchain"
   ],
   "author": "callisezenwaka@gmail.com",
   "license": "MIT",
@@ -24,21 +31,31 @@
   },
   "homepage": "https://github.com/callezenwaka/Konfidio_task#readme",
   "dependencies": {
-    "chai": "^4.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mocha": "^9.2.1"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.0",
+    "@typechain/ethers-v5": "^9.0.0",
+    "@typechain/hardhat": "^5.0.0",
     "@types/chai": "^4.3.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
+    "chai": "^4.2.0",
     "dotenv": "^16.0.0",
+    "ethereum-waffle": "^3.0.0",
+    "ethers": "^5.0.0",
+    "hardhat": "^2.9.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.6.0",
-    "typescript": "^4.6.2",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.7.20",
+    "typescript": "^4.6.2"
   }
 }
