--- a/package.json
+++ b/package.json
@@ -31,14 +31,20 @@
   },
   "homepage": "https://github.com/callezenwaka/Konfidio_task#readme",
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@truffle/hdwallet-provider": "^2.0.3",
+    "chai": "^4.3.6",
     "cors": "^2.8.5",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.4",
     "express": "^4.17.3",
-    "mocha": "^9.2.1"
+    "hardhat": "^2.8.4",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.7.21"
   },
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-etherscan": "^3.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@typechain/ethers-v5": "^9.0.0",
     "@typechain/hardhat": "^5.0.0",
     "@types/chai": "^4.3.0",
@@ -46,16 +52,10 @@
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
-    "chai": "^4.2.0",
     "dotenv": "^16.0.0",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
-    "hardhat": "^2.9.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.6.0",
     "tslib": "^2.3.1",
-    "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.7.20",
     "typescript": "^4.6.2"
   }
 }
