--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev": "nodemon -r dotenv/config src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "test": "test"
+    "test": "test",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -50,10 +52,15 @@
     "@types/chai": "^4.3.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.5.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
+    "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.0",
+    "jest": "^28.1.0",
     "nodemon": "^2.0.15",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.1",
     "ts-node": "^10.6.0",
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
